--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@react-google-maps/api": "^2.19.2",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "crypto-js": "^4.1.1",
+    "crypto-random-string": "^5.0.0",
     "leaflet": "^1.9.4",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
